add missing reference to AI models

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -9,7 +9,7 @@
 
 @misc{EpochAIModels2025,
   title = {Data on AI Models},
-  author = {{Epoch AI}},
+  author = {{Epoch AI Models}},
   year = {2025},
   month = {07},
   url = {https://epoch.ai/data/ai-models},
